@@ -728,7 +728,7 @@ static int php_openssl_sockop_cast(php_stream *stream, int castas, void **ret TS
 
 		case PHP_STREAM_AS_FD_FOR_SELECT:
 			if (ret) {
-				*ret = (void*)sslsock->s.socket;
+				*(int *)ret = sslsock->s.socket;
 			}
 			return SUCCESS;
 
@@ -738,7 +738,7 @@ static int php_openssl_sockop_cast(php_stream *stream, int castas, void **ret TS
 				return FAILURE;
 			}
 			if (ret) {
-				*ret = (void*)sslsock->s.socket;
+				*(int *)ret = sslsock->s.socket;
 			}
 			return SUCCESS;
 		default:
